addit. analyses and geosp. data

--- a/non-parametric-stats/analyses_positions34.ipynb
+++ b/non-parametric-stats/analyses_positions34.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "id": "c4c6f38f-f5e1-4699-8822-6d01f9931b99",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "id": "84a266e1-0bda-4d79-9420-34555faf3111",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "id": "84842059-e9ef-4ca1-af95-cc5d46422f8f",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Negreiros\\AppData\\Local\\Temp\\ipykernel_19872\\2995027242.py:9: UserWarning: You are merging on int and float columns where the float values are not equal to their int representation.\n",
+      "C:\\Users\\Negreiros\\AppData\\Local\\Temp\\ipykernel_15476\\2995027242.py:9: UserWarning: You are merging on int and float columns where the float values are not equal to their int representation.\n",
       "  df_slurp_ido = pd.merge(df_slurp, df_ido, on=['sample', 'dp_position'], how='outer', suffixes=('_slurp', '_ido'))\n"
      ]
     }
@@ -75,6 +75,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "aa6200f7-3686-42fe-ab44-19ffbbf8b883",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.021"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['SNR1', 'SNR2', 'SNR3']].min().min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "52bb6265-5cc9-4bf1-a26b-fca8ba8c6dab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59.202"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['SNR1', 'SNR2', 'SNR3']].max().max()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8267110f-2b82-4260-82d2-d1163716808d",
    "metadata": {},
@@ -84,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "id": "2bb4a7de-dbcd-4f8a-912d-f95bb8d2a71e",
    "metadata": {},
    "outputs": [
@@ -98,7 +140,7 @@
        "       'H-2', 'H-3', 'H-4', 'H-SW'], dtype=object)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "id": "048da139-782f-4f07-8863-a98f37a7c9ca",
    "metadata": {},
    "outputs": [],
@@ -134,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "id": "f344c05e-c90b-4368-93c3-add7a96f7ec9",
    "metadata": {},
    "outputs": [
@@ -344,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "id": "e7f2fc18-2aad-407d-8733-af76a26bb219",
    "metadata": {},
    "outputs": [
@@ -411,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "id": "e0ad636c-0490-432b-8c25-a8ba475e01c1",
    "metadata": {},
    "outputs": [
@@ -439,6 +481,7 @@
        "      <th>sample</th>\n",
        "      <th>vhg</th>\n",
        "      <th>vc</th>\n",
+       "      <th>0.063</th>\n",
        "      <th>Frings et al. (2011)  [Estimated kf]</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -448,6 +491,7 @@
        "      <td>A-3</td>\n",
        "      <td>-0.02</td>\n",
        "      <td>-1.258000e-06</td>\n",
+       "      <td>1.292247</td>\n",
        "      <td>0.000063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -455,6 +499,7 @@
        "      <td>B-3</td>\n",
        "      <td>0.10</td>\n",
        "      <td>4.570000e-06</td>\n",
+       "      <td>1.122334</td>\n",
        "      <td>0.000046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -462,6 +507,7 @@
        "      <td>B-4</td>\n",
        "      <td>0.09</td>\n",
        "      <td>9.371880e-06</td>\n",
+       "      <td>0.712946</td>\n",
        "      <td>0.000104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -469,6 +515,7 @@
        "      <td>C-3</td>\n",
        "      <td>-0.07</td>\n",
        "      <td>-3.206000e-06</td>\n",
+       "      <td>1.164083</td>\n",
        "      <td>0.000046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -476,6 +523,7 @@
        "      <td>C-4</td>\n",
        "      <td>-0.03</td>\n",
        "      <td>-1.329000e-06</td>\n",
+       "      <td>0.819672</td>\n",
        "      <td>0.000044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -483,6 +531,7 @@
        "      <td>D-3</td>\n",
        "      <td>0.08</td>\n",
        "      <td>1.384000e-06</td>\n",
+       "      <td>0.468384</td>\n",
        "      <td>0.000017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -490,6 +539,7 @@
        "      <td>D-4</td>\n",
        "      <td>0.02</td>\n",
        "      <td>4.320000e-07</td>\n",
+       "      <td>0.376344</td>\n",
        "      <td>0.000022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -497,6 +547,7 @@
        "      <td>E-3</td>\n",
        "      <td>0.20</td>\n",
        "      <td>2.080000e-06</td>\n",
+       "      <td>1.229105</td>\n",
        "      <td>0.000010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -504,6 +555,7 @@
        "      <td>E-4</td>\n",
        "      <td>0.10</td>\n",
        "      <td>2.620000e-07</td>\n",
+       "      <td>2.149321</td>\n",
        "      <td>0.000003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -511,6 +563,7 @@
        "      <td>G-3</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.000000e+00</td>\n",
+       "      <td>0.540424</td>\n",
        "      <td>0.000016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -518,6 +571,7 @@
        "      <td>G-4</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.000000e+00</td>\n",
+       "      <td>0.834376</td>\n",
        "      <td>0.000009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -525,6 +579,7 @@
        "      <td>H-3</td>\n",
        "      <td>0.02</td>\n",
        "      <td>2.700000e-07</td>\n",
+       "      <td>0.205233</td>\n",
        "      <td>0.000013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -532,6 +587,7 @@
        "      <td>H-4</td>\n",
        "      <td>0.02</td>\n",
        "      <td>7.600000e-07</td>\n",
+       "      <td>0.338983</td>\n",
        "      <td>0.000038</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -539,29 +595,29 @@
        "</div>"
       ],
       "text/plain": [
-       "    sample   vhg            vc  Frings et al. (2011)  [Estimated kf]\n",
-       "27     A-3 -0.02 -1.258000e-06                              0.000063\n",
-       "64     B-3  0.10  4.570000e-06                              0.000046\n",
-       "75     B-4  0.09  9.371880e-06                              0.000104\n",
-       "102    C-3 -0.07 -3.206000e-06                              0.000046\n",
-       "111    C-4 -0.03 -1.329000e-06                              0.000044\n",
-       "141    D-3  0.08  1.384000e-06                              0.000017\n",
-       "154    D-4  0.02  4.320000e-07                              0.000022\n",
-       "180    E-3  0.20  2.080000e-06                              0.000010\n",
-       "190    E-4  0.10  2.620000e-07                              0.000003\n",
-       "256    G-3  0.00  0.000000e+00                              0.000016\n",
-       "266    G-4  0.00  0.000000e+00                              0.000009\n",
-       "294    H-3  0.02  2.700000e-07                              0.000013\n",
-       "303    H-4  0.02  7.600000e-07                              0.000038"
+       "    sample   vhg            vc     0.063  Frings et al. (2011)  [Estimated kf]\n",
+       "27     A-3 -0.02 -1.258000e-06  1.292247                              0.000063\n",
+       "64     B-3  0.10  4.570000e-06  1.122334                              0.000046\n",
+       "75     B-4  0.09  9.371880e-06  0.712946                              0.000104\n",
+       "102    C-3 -0.07 -3.206000e-06  1.164083                              0.000046\n",
+       "111    C-4 -0.03 -1.329000e-06  0.819672                              0.000044\n",
+       "141    D-3  0.08  1.384000e-06  0.468384                              0.000017\n",
+       "154    D-4  0.02  4.320000e-07  0.376344                              0.000022\n",
+       "180    E-3  0.20  2.080000e-06  1.229105                              0.000010\n",
+       "190    E-4  0.10  2.620000e-07  2.149321                              0.000003\n",
+       "256    G-3  0.00  0.000000e+00  0.540424                              0.000016\n",
+       "266    G-4  0.00  0.000000e+00  0.834376                              0.000009\n",
+       "294    H-3  0.02  2.700000e-07  0.205233                              0.000013\n",
+       "303    H-4  0.02  7.600000e-07  0.338983                              0.000038"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['sample', 'vhg', 'vc', col_eq]].drop_duplicates()"
+    "df[['sample', 'vhg', 'vc', '0.063', col_eq]].drop_duplicates()"
    ]
   },
   {
